src/objects/UST_Event_Instance__c.object
<CustomObject>
    <description>Individual Event occurrence for Event Registrations</description>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>&quot;Active&quot;</defaultValue>
        <label>Active Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Open_Registration_Link__c</fullName>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;USTEventRegister?instanceID=&quot;
&amp; Id
&amp; &quot;&amp;adminopen=1&quot;
,&quot;Admin Open Registration&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Open Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Open_Registration__c</fullName>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;USTEventRegister?instanceID=&quot;
&amp; Id
&amp; &quot;&amp;adminopen=1&quot;
,&quot;Admin Open Registration&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Open Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Registration_URL_Override__c</fullName>
        <description>If you wish to override the master event configuration for an alternate registration link you may do so here.</description>
        <inlineHelpText>If you wish to override the master event configuration for an alternate registration link you may do so here.</inlineHelpText>
        <label>Alternate Registration URL Override</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Building_Override__c</fullName>
        <description>Override of the master event configurations for building location.</description>
        <inlineHelpText>Override of the master event configurations for building location.</inlineHelpText>
        <label>Building Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Buildings</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Capacity of the Event Session</description>
        <inlineHelpText>Capacity of this Event Session</inlineHelpText>
        <label>Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Attendees__c</fullName>
        <description>The number of the field “Actual Number of Guests” in the event registration object, which is a field that the user manually put in the attended guests&apos; number after the event.</description>
        <inlineHelpText>The number of the field “Actual Number of Guests” in the event registration object, which is a field that the user manually put in the attended guests&apos; number after the event.</inlineHelpText>
        <label>Confirmed Attendees</label>
        <summarizedField>UST_Event_Registration__c.Actual_Number_of_Guests__c</summarizedField>
        <summaryForeignKey>UST_Event_Registration__c.Event_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Attendees__c</fullName>
        <description>Sum of Number of Guests plus 1 for the student registration</description>
        <inlineHelpText>Sum of Number of Guests plus 1 for the student registration</inlineHelpText>
        <label>Count of Attendees</label>
        <summarizedField>UST_Event_Registration__c.Total_Number_of_Guests__c</summarizedField>
        <summaryFilterItems>
            <field>UST_Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Requested, Received, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>UST_Event_Registration__c.Event_Instance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Available_Capacity__c</fullName>
        <formula>Capacity__c - Count_of_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Available Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event__r.Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>UST_Event__c</referenceTo>
        <relationshipLabel>UST Event Instances</relationshipLabel>
        <relationshipName>Event_Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Exclude_Search_Engine_Tag_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Help to exclude the events appearing in the google search</inlineHelpText>
        <label>Exclude Search Engine Tag Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feed_Registration_Button_Text_Override__c</fullName>
        <description>Override of the main event definition. The text of the registration link in the feeds that appear on external Web sites. Will default to &quot;Register&quot; i not defined.</description>
        <inlineHelpText>Override of the main event definition. The text of the registration link in the feeds that appear on external Web sites. Will default to &quot;Register&quot; i not defined.</inlineHelpText>
        <label>Feed Registration Button Text Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Notes__c</fullName>
        <description>A field to capture notes on an instance. For example, Attendance related notes (weather), catering notes or parking comments.</description>
        <inlineHelpText>A field to capture notes on an instance. For example, Attendance related notes (weather), catering notes or parking comments.</inlineHelpText>
        <label>Instance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instance_Short_Description__c</fullName>
        <description>Short qualifying description of session.</description>
        <inlineHelpText>Short qualifying description of session.</inlineHelpText>
        <label>Instance Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_Title__c</fullName>
        <description>The title of the session under the event.</description>
        <inlineHelpText>The title of the session under the event.</inlineHelpText>
        <label>Instance Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Override__c</fullName>
        <description>Overrides the master event configuration for the address of the location the event is taking place.</description>
        <inlineHelpText>Overrides the master event configuration for the address of the location the event is taking place.</inlineHelpText>
        <label>Location Address Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Map_Link_Override__c</fullName>
        <description>Overrides the master event configuration for the ink to a map (either campus map, google map, etc) of the location of the event.</description>
        <inlineHelpText>Overrides the master event configuration for the ink to a map (either campus map, google map, etc) of the location of the event.</inlineHelpText>
        <label>Location Map Link Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Title_Override__c</fullName>
        <description>Overrides the master event configuration for title of the location the event is taking place.</description>
        <inlineHelpText>Overrides the master event configuration for title of the location the event is taking place.</inlineHelpText>
        <label>Location Title Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type_Override__c</fullName>
        <description>Overrides the master event configuration of campus the event will be hosted.</description>
        <inlineHelpText>Overrides the master event configuration of campus the event will be hosted.</inlineHelpText>
        <label>Location Type Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
                <value>
                    <fullName>Rome</fullName>
                </value>
                <value>
                    <fullName>St. Paul</fullName>
                </value>
                <value>
                    <fullName>St. Paul - North</fullName>
                </value>
                <value>
                    <fullName>St. Paul - South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Registration__c</fullName>
        <description>Registration is open to users</description>
        <formula>IF( ISPICKVAL(Active_Status__c, &quot;Active&quot;) &amp;&amp; Registration_Close_Date__c &gt;= Today() &amp;&amp; Current_Available_Capacity__c &gt; 0, TRUE, Null)</formula>
        <label>Open Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Attendees__c</fullName>
        <description>Number of registrants minus guests they are bringing</description>
        <inlineHelpText>Number of registrants minus guests they are bringing</inlineHelpText>
        <label>Primary Attendees</label>
        <summaryFilterItems>
            <field>UST_Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Requested, Received, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>UST_Event_Registration__c.Event_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Confirmed_Atendees__c</fullName>
        <description>The number of registration that are confirmed counted once</description>
        <inlineHelpText>The number of registration that are confirmed counted once</inlineHelpText>
        <label>Primary Confirmed Atendees</label>
        <summaryFilterItems>
            <field>UST_Event_Registration__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>UST_Event_Registration__c.Event_Instance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Event_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Event Location</label>
        <referenceTo>Event_Location__c</referenceTo>
        <relationshipName>Event_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruitment_Year__c</fullName>
        <description>the recruitment year the event occurred in and not the recruitment year in which the student will start.</description>
        <inlineHelpText>The recruitment year the event occurred in and NOT the recruitment year in which the student will start.</inlineHelpText>
        <label>Recruitment Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>19-20</fullName>
                </value>
                <value>
                    <fullName>20-21</fullName>
                </value>
                <value>
                    <fullName>21-22</fullName>
                </value>
                <value>
                    <fullName>22-23</fullName>
                </value>
                <value>
                    <fullName>23-24</fullName>
                </value>
                <value>
                    <fullName>24-25</fullName>
                </value>
                <value>
                    <fullName>25-26</fullName>
                </value>
                <value>
                    <fullName>18-19</fullName>
                </value>
                <value>
                    <fullName>2019-2020</fullName>
                    <isActive>false</isActive>
                    <label>2019-2020</label>
                </value>
                <value>
                    <fullName>2020-2021</fullName>
                    <isActive>false</isActive>
                    <label>2020-2021</label>
                </value>
                <value>
                    <fullName>2021-2022</fullName>
                    <isActive>false</isActive>
                    <label>2021-2022</label>
                </value>
                <value>
                    <fullName>2022-2023</fullName>
                    <isActive>false</isActive>
                    <label>2022-2023</label>
                </value>
                <value>
                    <fullName>2023-2024</fullName>
                    <isActive>false</isActive>
                    <label>2023-2024</label>
                </value>
                <value>
                    <fullName>2024-2025</fullName>
                    <isActive>false</isActive>
                    <label>2024-2025</label>
                </value>
                <value>
                    <fullName>2025-2026</fullName>
                    <isActive>false</isActive>
                    <label>2025-2026</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Close_Date__c</fullName>
        <description>Close Day of the Event</description>
        <formula>IF(NOT(ISBLANK(Event__r.Close_Event_Days_Before__c)), DATEVALUE(End_Date_Time__c - ABS(Event__r.Close_Event_Days_Before__c)),
IF(ISBLANK(Event__r.Close_Event_Days_Before__c), DATEVALUE(End_Date_Time__c),
NULL))</formula>
        <label>Registration Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Link__c</fullName>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;USTEventRegister?instanceID=&quot;
&amp; Id
,&quot;Register&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_QR_Code__c</fullName>
        <formula>/*

IMAGE(&apos;https://chart.googleapis.com/chart?chs=250x250&amp;cht=qr&amp;chl=&apos; +  Event__r.Community_Base_URL__c + &apos;USTEventRegister?instanceID=&apos; +  Id ,&apos;Scan QR code to open record in mobile.&apos;)

*/

IMAGE(&apos;https://chart.googleapis.com/chart?chs=400x400&amp;cht=qr&amp;chl=&apos; +  Event__r.Community_Base_URL__c + &apos;USTEventRegister?instanceID=&apos; +  Id ,&apos;Scan QR code to open record in mobile.&apos;,250,250)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Undergrad_FY_Admin_Registration_Link__c</fullName>
        <description>Registration Link that asks for High School information</description>
        <formula>HYPERLINK(
Event__r.Community_Base_URL__c
&amp; &quot;USTEventRegister?instanceID=&quot;
&amp; Id
&amp; &quot;&amp;adminopen=1&quot;
&amp; &quot;&amp;audience=High%20School%20Senior&quot;
,&quot;Admin Open Registration - Ask HS&quot;)</formula>
        <inlineHelpText>Registration Link that asks for High School information</inlineHelpText>
        <label>Undergrad FY Admin Registration Link</label>
        <type>Text</type>
    </fields>
    <label>UST Event Instance</label>
    <listViews>
        <fullName>All_Instances</fullName>
        <columns>NAME</columns>
        <columns>Instance_Title__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Active_Status__c</columns>
        <columns>Count_of_Attendees__c</columns>
        <columns>Current_Available_Capacity__c</columns>
        <columns>Instance_Short_Description__c</columns>
        <columns>Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Instances</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Instance_Title__c</columns>
        <columns>Event__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Capacity__c</columns>
        <columns>Count_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sessions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Visits_Today</fullName>
        <columns>NAME</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Event__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Count_of_Attendees__c</columns>
        <columns>Capacity__c</columns>
        <columns>Active_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date_Time__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Visits Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Future_Undergraduate_Events</fullName>
        <booleanFilter>1 AND (2 OR 3 or 5) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>Event__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Instance_Title__c</columns>
        <columns>Active_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date_Time__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>contains</operation>
            <value>Personalized Visit</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>contains</operation>
            <value>Information Session</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>notContain</operation>
            <value>MSW,LAW,Virtual</value>
        </filters>
        <filters>
            <field>Event_Name__c</field>
            <operation>contains</operation>
            <value>Saturday</value>
        </filters>
        <label>Future Undergraduate Events</label>
        <language>en_US</language>
        <sharedTo>
            <group>UG_Admissions</group>
            <group>UG_Enrollment</group>
            <group>Visit_Students</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Social_Work</fullName>
        <columns>NAME</columns>
        <columns>Instance_Title__c</columns>
        <columns>Start_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Instance_Title__c</field>
            <operation>contains</operation>
            <value>MSW</value>
        </filters>
        <label>Social Work</label>
        <language>en_US</language>
        <sharedTo>
            <group>SSW_Admissions</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Event Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UST Event Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>